Improving the tests